--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.5.0",
+    "dompurify": "^2.2.3",
+    "highlightjs": "^9.16.2",
+    "hljs": "^6.2.3",
+    "jquery": "^3.5.1",
+    "marked": "^1.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
